# struct-as-imhex-pattern

./: .gitignore  Cargo.toml  readme.md
src/: lib.rs
